--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<?php
-echo "He  llo World";
-?>
+<!DOCTYPE html>
+<html lang="ZH-CN">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+    哈哈
+</body>
+</html>
